--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#0088C8</color>
+    <color name="colorPrimaryDark">#006695</color>
+    <color name="colorAccent">#00B386</color>
+
+    <color name="background_dark">#101010</color>
+    <color name="background_dark_contrast">#222222</color>
+
+    <color name="graph_green">#00B386</color>
+    <color name="graph_red">#E1523D</color>
 </resources>
