--- a/sample/src/main/res/values/dimens.xml
+++ b/sample/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="small_margin">13dp</dimen>
+    <dimen name="default_margin">26dp</dimen>
+    <dimen name="graph_height">160dp</dimen>
 </resources>
