--- a/sample/src/main/res/values/dimens.xml
+++ b/sample/src/main/res/values/dimens.xml
@@ -8,4 +8,10 @@
     <dimen name="small_margin">13dp</dimen>
     <dimen name="default_margin">26dp</dimen>
     <dimen name="graph_height">160dp</dimen>
+    <dimen name="line_thin">2dp</dimen>
+    <dimen name="line_thick">3dp</dimen>
+
+
+    <integer name="light_fill">30</integer>
+    <integer name="dark_fill">60</integer>
 </resources>
